--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ okhttp = "4.12.0"
 serialization = "1.6.0"
 collectionsImmutable = "0.3.4"
 secret = "2.0.1"
+detekt = "1.23.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -74,6 +75,8 @@ okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-
 
 # Misc
 kotlinx-collection-immutable = { group = "org.jetbrains.kotlinx", name = "kotlinx-collection-immutable", version.ref = "collectionsImmutable" }
+detekt-gradle-plugin = { group = "io.gitlab.arturbosch.detekt", name = "detekt-gradle-plugin", version.ref = "detekt" }
+detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -84,3 +87,6 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 secret = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secret" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+
+githubStarViewer-detekt = { id = "githubstarviewer.detekt", version = "unspecified" }
