--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,7 +39,7 @@ jobs:
         run: ./gradlew detekt reportMerge --continue
 
       - name: Run report with ReviewDog
-        if: steps.detekt.outcome == 'failure'
+        if: always()
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
