--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: reviewdog/action-setup@v1.0.6
 
       - name: setup JDK17
         uses: actions/setup-java@v4
