--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - uses: reviewdog/action-setup@v1.0.6
@@ -42,7 +43,7 @@ jobs:
         run: ./gradlew detekt reportMerge --continue
 
       - name: Run report with ReviewDog
-        if: always()
+        if: ${{ failure() }}
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
