feat: rename GITHUB_API_TOKEN -> API_TOKEN

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,9 +31,9 @@ jobs:
       # TODO: 共通化させる
       - name: setup local.properties
         env:
-          GITHUB_API_TOKEN: ${{ secrets.GITHUB_API_TOKEN }}
+          API_TOKEN: ${{ secrets.API_TOKEN }}
         run: |
-          echo "GITHUB_API_TOKEN=$GITHUB_API_TOKEN" >> local.properties
+          echo "API_TOKEN=$API_TOKEN" >> local.properties
 
       - name: setup detekt.properties
         run: |
