--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,18 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: reviewdog/action-setup@v1.0.6
 
-      # TODO: 共通化させる
-      - name: setup JDK17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
-      # TODO: 共通化させる
-      - name: setup gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: wrapper
-      # TODO: 共通化させる
+      - uses: ./.github/actions/setup-java
       - name: setup local.properties
         env:
           API_TOKEN: ${{ secrets.API_TOKEN }}
