--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,15 +20,7 @@ jobs:
       - uses: reviewdog/action-setup@v1.0.6
 
       - uses: ./.github/actions/setup-java
-      - name: setup local.properties
-        env:
-          API_TOKEN: ${{ secrets.API_TOKEN }}
-        run: |
-          echo "API_TOKEN=$API_TOKEN" >> local.properties
-      - name: setup detekt.properties
-        run: |
-          # disable autoCorrect
-          echo "autoCorrect=false" >> config/detekt/detekt.properties
+      - uses: ./.github/actions/setup-properties
 
       - name: run detekt
         run: ./gradlew detekt --continue
