--- a/.github/actions/setup-properties/action.yml
+++ b/.github/actions/setup-properties/action.yml
@@ -1,13 +1,18 @@
 name: Setup properties
 description: Set up properties file for build
 
+inputs:
+  github-token:
+    description: 'A Github PAT'
+    required: true
+
 runs:
   using: "composite"
   steps:
     - name: setup local.properties
       shell: bash
       env:
-        API_TOKEN: ${{ secrets.API_TOKEN }}
+        API_TOKEN: ${{ inputs.github-token }}
       run: |
         echo "API_TOKEN=$API_TOKEN" >> local.properties
     - name: setup detekt.properties
