--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -16,31 +16,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # TODO: 共通化させる
-      - name: setup JDK17
-        uses: actions/setup-java@v4
+      - uses: ./.github/actions/setup-java
+      - uses: ./.github/actions/setup-properties
         with:
-          distribution: temurin
-          java-version: 17
-      # TODO: 共通化させる
-      - name: setup gradle
-        uses: gradle/gradle-build-action@v2
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: ./.github/actions/setup-secrets
         with:
-          gradle-version: wrapper
-      # TODO: 共通化させる
-      - name: setup local.properties
-        env:
-          API_TOKEN: ${{ secrets.API_TOKEN }}
-        run: |
-          echo "API_TOKEN=$API_TOKEN" >> local.properties
-      - name: setup detekt.properties
-        run: |
-          # disable autoCorrect
-          echo "autoCorrect=false" >> config/detekt/detekt.properties
-      - name: setup google-services.json
-        env:
-          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: echo $GOOGLE_SERVICES_JSON | base64 --decode > app/google-services.json
+          google-services-json: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
       - name: run unit test
         run: ./gradlew testDebugUnitTest
