--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,22 +2,22 @@
 agp = "8.3.0"
 kotlin = "1.9.10"
 ksp = "1.9.10-1.0.13"
+composeCompiler = "1.5.3" # note: https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
 hilt = "2.48.1"
-hiltNavigationCompose = "1.1.0"
+hiltNavigationCompose = "1.2.0"
 navigation = "2.7.5"
 coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
-lifecycle = "2.6.2"
-activityCompose = "1.8.0"
-composeBom = "2023.10.01"
+lifecycle = "2.7.0"
+activityCompose = "1.8.2"
+composeBom = "2024.02.02"
 appcompat = "1.6.1"
 material = "1.10.0"
-firebaseBom = "32.5.0"
-googleServices = "4.4.0"
+firebaseBom = "32.7.4"
+googleServices = "4.4.1"
 coroutine = "1.7.3"
-composeCompiler = "1.5.3" # note: バージョン番号としてそのまま参照してるから消さないで
 ktor = "2.3.5"
 okhttp = "4.12.0"
 serialization = "1.6.0"
