--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,16 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ]
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": [
+		"config:recommended"
+	],
+	"packageRules": [
+		{
+			"matchPackagePrefixes": [
+				"androidx.compose.compiler",
+				"org.jetbrains.kotlin:"
+			],
+			"groupName": "Compose Compiler and Kotlin",
+			"groupSlug": "compose_compiler_and_kotlin"
+		}
+	]
 }
