--- a/.github/workflows/check-buildable.yml
+++ b/.github/workflows/check-buildable.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: .github/actions/setup-java
+      - uses: ./.github/actions/setup-java
       - uses: ./.github/actions/setup-properties
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
