chore: remove junit4

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,9 +7,6 @@ hilt = "2.51"
 hiltNavigationCompose = "1.2.0"
 navigation = "2.7.5"
 coreKtx = "1.12.0"
-junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
 lifecycle = "2.7.0"
 activityCompose = "1.8.2"
 composeBom = "2024.02.02"
@@ -65,12 +62,6 @@ kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 # Test
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutine" }
-# junit = { group = "junit", name = "junit", version.ref = "junit" }
-# androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-# androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-# hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
-# androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-# androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 
 # HTTP Client
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
@@ -85,6 +76,7 @@ okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-
 
 # Lint
 detekt-gradle-plugin = { group = "io.gitlab.arturbosch.detekt", name = "detekt-gradle-plugin", version.ref = "detekt" }
+# NOTE: DetektPlugin.ktで参照しているので消さない
 detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
 
 # Misc
