chore: メジャーアップデート以外のときは自動マージ

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,10 @@
 	],
 	"labels": ["deps"],
 	"packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    },
 		{
 			"matchPackagePatterns": [
 				"org.jetbrains.kotlin.*"
