chore: ベースが進んだらリベースする

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
 		"config:recommended"
 	],
 	"labels": ["deps"],
+  "rebaseWhen": "behind-base-branch",
 	"packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
