chore: PRを無制限に作っても良い

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
 	],
 	"labels": ["deps"],
   "rebaseWhen": "behind-base-branch",
+  "prConcurrentLimit": 0,
 	"packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
