--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.4.0"
-kotlin = "1.9.23"
-ksp = "1.9.23-1.0.20" # note: https://github.com/google/ksp/releases?q=&expanded=true
+kotlin = "2.0.21"
+ksp = "2.0.21-1.0.25" # note: https://github.com/google/ksp/releases?q=&expanded=true
 composeCompiler = "1.5.13" # note: https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
 hilt = "2.52"
 hiltNavigationCompose = "1.2.0"
@@ -43,8 +43,6 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
-## renovateがcompose-compilerをアップデートするために必要
-android-composeCompiler = { group = "androidx.compose.compiler", name = "compiler", version.ref = "composeCompiler" }
 # androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 
 # DI Container
@@ -95,6 +93,7 @@ secret = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 githook = { id = "com.star-zero.gradle.githook", version.ref = "githook" }
 kotlinPowerAssert = { id = "com.bnorm.power.kotlin-power-assert", version.ref = "kotlinPowerAssert" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 # convention plugin
 githubStarViewer-detekt = { id = "githubstarviewer.detekt", version = "unspecified" }
